added navigation properties and umbraco navi hide

--- a/Clean.Site/Views/Partials/navigation.cshtml
+++ b/Clean.Site/Views/Partials/navigation.cshtml
@@ -1,17 +1,27 @@
 @inherits UmbracoViewPage
 
+@{
+    var homePage = Umbraco.AssignedContentItem.AncestorOrSelf<HomePage>();
+    var children = homePage.MainNavigation;
+}
+
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="/">Start Bootstrap</a>
+        <a class="navbar-brand" href="@homePage.Url()">Start Bootstrap</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
             <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/">Home</a></li>
-                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about/">About</a></li>
+                @if(children != null && children.Any())
+                {
+                    foreach(var item in children)
+                    {
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="@item.Url" target="@item.Target">@item.Name</a></li>
+                    }
+                }
             </ul>
         </div>
     </div>
