all code to the end of episode 6

--- a/Clean.Site/Views/Partials/navigation.cshtml
+++ b/Clean.Site/Views/Partials/navigation.cshtml
@@ -2,7 +2,7 @@
 
 @{
     var homePage = Umbraco.AssignedContentItem.AncestorOrSelf<HomePage>();
-    var children = homePage.MainNavigation;
+    var navigationItems = homePage.MainNavigation;
 }
 
 <!-- Navigation-->
@@ -15,11 +15,31 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                @if(children != null && children.Any())
+                @if(navigationItems != null && navigationItems.Any())
                 {
-                    foreach(var item in children)
+                    var dropdownId = 0;
+                    foreach(var item in navigationItems)
                     {
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="@item.Url" target="@item.Target">@item.Name</a></li>
+                        var hasChildLinks = item.ChildLinks != null && item.ChildLinks.Any();
+                        if(hasChildLinks)
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link px-lg-3 py-3 py-lg-4 dropdown-toggle" href="https://google.com" id="navbarDropdown@(dropdownId)" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    @item.Title
+                                </a>
+                                <ul class="dropdown-menu border-0" aria-labelledby="navbarDropdown@(dropdownId)">
+                                    @foreach(var childLink in item.ChildLinks)
+                                    {
+                                        <li><a class="dropdown-item" href="@childLink.Url" target="@childLink.Target">@childLink.Name</a></li>
+                                    }
+                                </ul>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="@item.Link.Url" target="@item.Link.Target">@item.Title</a></li>    
+                        }
+                        dropdownId++;
                     }
                 }
             </ul>
