All code to the end of episode 8

--- a/Clean.Site/Views/Partials/footer.cshtml
+++ b/Clean.Site/Views/Partials/footer.cshtml
@@ -1,37 +1,32 @@
 @inherits UmbracoViewPage
 
+@{
+    var homePage = Model.AncestorOrSelf<HomePage>();
+}
+
 <!-- Footer-->
 <footer class="border-top">
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
-                <ul class="list-inline text-center">
-                    <li class="list-inline-item">
-                        <a href="#!">
-                            <span class="fa-stack fa-lg">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                            </span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#!">
-                            <span class="fa-stack fa-lg">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                            </span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a href="#!">
-                            <span class="fa-stack fa-lg">
-                                <i class="fas fa-circle fa-stack-2x"></i>
-                                <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                            </span>
-                        </a>
-                    </li>
-                </ul>
-                <div class="small text-center text-muted fst-italic">&copy; Copyright Your Website @DateTime.Now.Year</div>
+                @if(homePage.FooterSocialLinks != null)
+                {
+                    <ul class="list-inline text-center">
+                        @foreach(var socialLink in homePage.FooterSocialLinks)
+                        {
+                            <li class="list-inline-item">
+                                <a href="@socialLink.Url">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fas fa-circle fa-stack-2x"></i>
+                                        <i class="fab fa-@socialLink.Network fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </a>
+                            </li>
+                        }
+                    </ul>
+                }
+                
+                <div class="small text-center text-muted fst-italic">&copy; @Umbraco.GetDictionaryValue("Footer.CopyrightTitle") @DateTime.Now.Year</div>
             </div>
         </div>
     </div>
